todas las págs excepto faltas y retrasos

--- a/espacioestudiante.html
+++ b/espacioestudiante.html
@@ -41,9 +41,9 @@
                         <ul>
                             <li><a class="inicio" href="index.html"><img src="images/casa.png" length=10% width=10% > <br> Inicio</a></li>
                             <li><a class="calendario" href="calendario.html"><img src="images/calendario.png" length=10% width=10% >Calendario</a></li>
-                            <li><a class="asignaturas" href="#"><img src="images/asignaturas.png" length=10% width=10% >Asignaturas</a></li>
-                            <li><a class="contacto" href="#"><img src="images/contacto.png" length=10% width=10% >Contacto/Tutorías</a></li>
-                            <li><a class="faltas" href="#"><img src="images/reloj.png" length=10% width=10% >Faltas y retrasos</a></li>
+                            <li><a class="asignaturas" href="asignaturas.html"><img src="images/asignaturas.png" length=10% width=10% >Asignaturas</a></li>
+                            <li><a class="contacto" href="contacto.html"><img src="images/contacto.png" length=10% width=10% >Contacto/Tutorías</a></li>
+                            <li><a class="faltas" href="faltas.html"><img src="images/reloj.png" length=10% width=10% >Faltas y retrasos</a></li>
                         </ul>
                     </nav>
                 
