--- a/contacto.html
+++ b/contacto.html
@@ -28,6 +28,8 @@
 
         <main>
             <h2>¡Bienvenido a tu espacio de contactos y tutorías!</h2>
+            <img src="images/contacto.png">
+
 
             <input type="search" name="búsqueda de profesores y administración">
             <input type="submit" value="BUSCAR">
