--- a/calendario.html
+++ b/calendario.html
@@ -28,12 +28,13 @@
 
         <main>
             <h2>¡Bienvenido a tu calendario personal!</h2>
+            <img src="images/calendario.png">
             
             <label for="start">Calendario:</label>
             <input type="date" id="start" name="trip-start"
             value="2023-01-01"
             min="2023-01-01" max="2033-12-31">
-            
+
             <br>
 
             <a href="espacioestudiante.html">Volver a espacio estudiante</a>
