--- a/faltas.html
+++ b/faltas.html
@@ -29,7 +29,19 @@
 
         <main>
             <h2>¡Bienvenido a tu página de faltas y retrasos!</h2>
+            <h3>En este apartado podrás ver todas las faltas y retrasos que llevas durante el actual año académico. Si sabes que vas a faltar o llegar tarde de manera justificada o has llegado o faltado tarde y lo quieres justificar, por favor, ponte en contacto con administración y tu tutor.</h3>
 
+
+            <input type="search" name="búsqueda de profesores y administración">
+            <input type="submit" value="BUSCAR">
+
+            <br>
+            <br>
+            <br>
+            <textarea name="comentarios" rows="10" cols="40">Escribe aquí tus comentarios</textarea>
+            <br>
+            <input type="submit" value="ENVIAR">
+            <br>
             <br>
             <a href="espacioestudiante.html">Volver a espacio estudiante</a>
         </main>
