--- a/calendario.html
+++ b/calendario.html
@@ -36,7 +36,13 @@
             min="2023-01-01" max="2033-12-31">
 
             <br>
+            <br>
 
+            <p><b>Calendario lectivo del año académico 2022-2023</b></p>
+            <img src="images/calendario_academico.png">
+
+            <br>
+            <br>
             <a href="espacioestudiante.html">Volver a espacio estudiante</a>
 
 
