--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
 
         <main>
             <h2>¡Bienvenido a tu espacio de contactos y tutorías!</h2>
-            <img src="images/contacto.png">
+            <img src="images/contacto.png" height="10%" width="10%">
 
 
             <input type="search" name="búsqueda de profesores y administración">
